<resources>
    <string name="app_name" translatable="false">Yuzu Browser</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="app_notfound">Acceptable application not found</string>
    <string name="form_resubmit">This page cannot be refreshed unless the postdata send. Would you like to resend the POSTDATA?</string>
    <string name="pattern_edittext_info">You can use wildcards. See Help for more information.</string>
    <string name="pattern_edittext_hint">URL</string>
    <string name="pattern_open_others">Open in other app</string>
    <string name="pattern_change_websettings">Change web setting</string>
    <string name="pattern_block">Block</string>
    <string name="useragent">UserAgent</string>
    <string name="javascript">JavaScript</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete_action">Delete this action?</string>
    <string name="confirm_delete_history">Delete this history?</string>
    <string name="confirm_delete_all_history">Delete all history?</string>
    <string name="confirm_delete_all_displayed_item">Delete all displayed items?</string>
    <string name="confirm_delete_all_favicon">Delete all favicon?</string>
    <string name="confirm_delete_bookmark">Delete this bookmark?</string>
    <string name="confirm_delete_button">Delete this button?</string>
    <string name="confirm_delete_speedDial">Delete this speed dial?</string>
    <string name="confirm_delete_gesture">Delete this gesture?</string>
    <string name="confirm_delete_search_url">Delete this search URL?</string>
    <string name="delete_history">Delete history</string>
    <string name="delete_all_history">Delete all history</string>
    <string name="delete_all_displayed_item">Delete all displayed items</string>
    <string name="delete_all_favicon">Delete all favicon</string>
    <string name="delete_bookmark">Delete bookmark</string>
    <string name="delete_speedDial">Delete speed dial</string>
    <string name="delete_search_query">Delete search queries</string>
    <string name="remove_geo_permission">Remove all Geolocation Permissions</string>
    <string name="pattern_open_app_list">Show application list</string>
    <string name="pattern_open_app_chooser">Show application chooser</string>
    <string name="now_loading">Now loading</string>
    <string name="now_downloading">Now downloading…</string>
    <string name="finish_mes">Would you like to leave this application?</string>
    <string name="minimize">Minimize</string>
    <string name="open">Open</string>
    <string name="open_new">Open in new tab</string>
    <string name="open_bg">Open in background tab</string>
    <string name="open_new_right">Open in right new tab</string>
    <string name="open_bg_right">Open in right background tab</string>
    <string name="share">Share</string>
    <string name="open_other_app">Open in another app</string>
    <string name="copy_url">Copy URL</string>
    <string name="share_link">Share link</string>
    <string name="open_link_other_app">Open link in another app</string>
    <string name="copy_link_url">Copy link URL</string>
    <string name="copy_link_text">Copy link text</string>
    <string name="save_link">Save link</string>
    <string name="save_link_as">Save link As…</string>
    <string name="open_image">Open image</string>
    <string name="open_image_new">Open image in new tab</string>
    <string name="open_image_bg">Open image in background tab</string>
    <string name="open_image_new_right">Open image in right new tab</string>
    <string name="open_image_bg_right">Open image in right background tab</string>
    <string name="share_image">Share image</string>
    <string name="share_image_url">Share image URL</string>
    <string name="open_image_other_app">Open image in another app</string>
    <string name="copy_image_url">Copy image URL</string>
    <string name="save_image">Save image</string>
    <string name="save_image_as">Save image As…</string>
    <string name="search_image">Search image</string>
    <string name="block_image">Add to resource block</string>
    <string name="add_image_pattern">Add image to pattern match</string>
    <string name="add_url_pattern">Add link to pattern match</string>
    <string name="add_image_black_list">Add image to black list</string>
    <string name="add_image_white_list">Add image to white list</string>
    <string name="add_link_black_list">Add link to black list</string>
    <string name="add_link_white_list">Add link to white list</string>
    <string name="open_all_new">Open all in new tab</string>
    <string name="open_all_bg">Open all in background tab</string>
    <string name="copy_clipboard_mes_before">Copied : </string>
    <string name="dial">Dial</string>
    <string name="add_contact">Add contact</string>
    <string name="copy_phone_num">Copy phone number</string>
    <string name="email">Send e-mail</string>
    <string name="copy_email_address">Copy e-mail address</string>
    <string name="open_map">Open map</string>
    <string name="copy_map_address">Copy map address</string>
    <string name="download_success">Download succeed.</string>
    <string name="download_paused">Download paused.</string>
    <string name="download_fail">Download failed.</string>
    <string name="download_cancel">Download canceled.</string>
    <string name="download">Download</string>
    <string name="filename">File name</string>
    <string name="download_file_overwrite">The file already exists. Overwrite it?</string>
    <string name="search_editText_hint">Search or type url</string>
    <string name="history">History</string>
    <string name="bookmark">Bookmark</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="location_mes">Allow sites to request access to your location</string>
    <string name="remember">Remember</string>
    <string name="clear_cache">Clear caches</string>
    <string name="clear_cookie">Clear cookies</string>
    <string name="clear_database">Clear HTML5 databases</string>
    <string name="clear_password">Clear passwords</string>
    <string name="clear_formdata">Clear formdata</string>
    <string name="clear_favicon">Clear favicon cache</string>
    <string name="close_all_tabs">Close all tabs</string>
    <string name="search">Search</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="title">Title</string>
    <string name="url">URL</string>
    <string name="title_empty_mes">Title cannot be empty.</string>
    <string name="url_empty_mes">URL cannot be empty.</string>
    <string name="succeed">Succeed!</string>
    <string name="failed">Failed for unknown error</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="add_folder">Add folder</string>
    <string name="new_folder_name">New folder</string>
    <string name="folder">Folder</string>
    <string name="sort">Sort</string>
    <string name="end_sort_label">End sorting</string>
    <string name="start_sort">Let\'s sort\u266a</string>
    <string name="end_sort">Sorting complete!</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="move_bookmark">Move to\u2026</string>
    <string name="proxy_enable">Enable proxy</string>
    <string name="proxy_mes">Proxy address</string>
    <string name="proxy_edittext_hint">127.0.0.1:8000</string>
    <string name="proxy_address_error">Proxy address format is wrong</string>
    <string name="open_file">Open file</string>
    <string name="open_url">Open URL</string>
    <string name="pause">Pause</string>
    <string name="pause_download">Pause download</string>
    <string name="resume_download">Resume download</string>
    <string name="cancel_download">Cancel download</string>
    <string name="clear_download">Remove from list</string>
    <string name="delete_download">Delete file</string>
    <string name="ssl_error_title">Security warning</string>
    <string name="ssl_error_mes">There are problems with the security certificate for this site.\n%1$s\nContinue?</string>
    <string name="ssl_error_certificate_date_invalid">The date of the certificate is invalid</string>
    <string name="ssl_error_certificate_expired">The certificate has expired</string>
    <string name="ssl_error_certificate_expired_info">End of validity period=</string>
    <string name="ssl_error_certificate_domain_mismatch">Hostname mismatch</string>
    <string name="ssl_error_certificate_domain_mismatch_info">CN=</string>
    <string name="ssl_error_certificate_invalid">A generic error occurred</string>
    <string name="ssl_error_certificate_not_yet_valid">The certificate is not yet valid</string>
    <string name="ssl_error_certificate_not_yet_valid_info">Start of validity period=</string>
    <string name="ssl_error_certificate_untrusted">The certificate authority is not trusted</string>
    <string name="ssl_error_certificate_untrusted_info">CA:</string>
    <string name="ssl_error_dont_ask_again">Don\'t ask again for this browsing session.</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="show_password">Show password</string>
    <string name="login">Login</string>
    <string name="edit_action">Edit action</string>
    <string name="action_cant_empty">Action cannot be empty.</string>
    <string name="action_empty">Empty action</string>
    <string name="gesture_test">Gesture test</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="page_info">Page information</string>
    <string name="tab_history">Tab history</string>
    <string name="tab_restored_succeed">Tab restored!</string>
    <string name="tab_restored_failed">No closed tab</string>
    <string name="tab_restored_setting_error">Please turn on [Browser settings]-[Save closed tabs]</string>
    <string name="toggle_enable">Enabled!</string>
    <string name="toggle_disable">Disabled!</string>
    <string name="name">Name</string>
    <string name="delete_ua">Delete UserAgent</string>
    <string name="delete_ua_confirm">Delete this UserAgent?</string>
    <string name="delete_web_encode">Delete this item</string>
    <string name="delete_web_encode_confirm">Delete this item?</string>
    <string name="web_encode">Text encoding</string>
    <string name="userjs_save">Save UserScript</string>
    <string name="userjs_save_confirm">Save this UserScript?</string>
    <string name="userjs_edit">Edit UserScript</string>
    <string name="userjs_delete">Delete UserScript</string>
    <string name="userjs_delete_confirm">Delete this UserScript?</string>
    <string name="userjs_info">UserScript info</string>
    <string name="userjs_info_name">Name</string>
    <string name="userjs_info_version">Version</string>
    <string name="userjs_info_author">Author</string>
    <string name="userjs_info_description">Description</string>
    <string name="userjs_info_include">Include</string>
    <string name="userjs_info_exclude">Exclude</string>
    <string name="userjs_add_file_confirm">Add file "%s"?</string>
    <string name="save">Save</string>
    <string name="not_save">Not save</string>
    <string name="pattern_syntax_error">Pattern syntax error</string>
    <string name="cannot_access_folder">Access denied</string>
    <string name="add_by_edit">Add by direct input</string>
    <string name="add_from_file">Add from file</string>
    <string name="set_folder_path">Set current path</string>
    <string name="go_data_folder">Go to data directory</string>
    <string name="go_sd_folder">Go to external storage</string>
    <string name="quit">Quit</string>
    <string name="clipboard_empty">Clipboard is empty</string>
    <string name="use_favicon">Use favicon</string>
</resources>