<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/open"
        android:title="@string/open" />

    <item
        android:id="@+id/openNew"
        android:title="@string/open_new" />

    <item
        android:id="@+id/openBg"
        android:title="@string/open_bg" />

    <item
        android:id="@+id/openNewRight"
        android:title="@string/open_new_right" />

    <item
        android:id="@+id/openBgRight"
        android:title="@string/open_bg_right" />

    <item
        android:id="@+id/share"
        android:title="@string/share" />

    <item
        android:id="@+id/copyUrl"
        android:title="@string/copy_url" />

    <item
        android:id="@+id/editBookmark"
        android:title="@string/edit_bookmark" />

    <item
        android:id="@+id/moveBookmark"
        android:title="@string/move_bookmark" />

    <item
        android:id="@+id/moveUp"
        android:title="@string/move_up" />

    <item
        android:id="@+id/moveDown"
        android:title="@string/move_down" />

    <item
        android:id="@+id/deleteBookmark"
        android:title="@string/delete_bookmark" />
</menu>