<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_mes"
            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/closeallCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_all_tabs"
            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/cacheCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_cache"
            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/cookieCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_cookie"
            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/databaseCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_database"
            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/passwordCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_password"
            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/formdataCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_formdata"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>