<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_history"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_all_histories"
        android:title="@string/delete_all_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_all_displayed_item"
        android:title="@string/delete_all_displayed_item"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_all_favicon"
        android:title="@string/delete_all_favicon"
        app:showAsAction="never" />
</menu>